--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "style-resources-loader": "^1.2.1"
   }
 }
