--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,30 +1,34 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: test
+name: Build and Deploy
 
-on: [push]
+on: 
+ push:
+  branches:
+   - master
  
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-    environment: production
-
-    strategy:
-      matrix:
-        node-version: [10.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build
-      run: |
+     - name: Checkout
+       uses: actions/checkout@v2
+       with:
+        persist-credentials: false
+
+     - name: Install and build
+       run: |
         npm install
-        npm run build --if-present
-      env: 
-        CI: true
+        npm run build
+    
+     - name: Deploy
+       uses: JamesIves/github-pages-deploy-action@3.5.9
+       with:
+        ACCESS_TOKEN: ${{ secrets.HOME_SECRET }}
+        BRANCH: master
+        FOLDER: dist
+        REPOSITORY_NAME: cubemmc/cubemc.github.io
+        TARGET_FOLDER: github-actions-demo
+    
