--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
         BRANCH: master
         FOLDER: dist
         REPOSITORY_NAME: cubemmc/cubemmc.github.io
-        TARGET_FOLDER: github-actions-demo
+        TARGET_FOLDER: Tricks
     
